...
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Título e Classificação -->
            <EditText
                android:id="@+id/editTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="Título da Receita"
                android:textSize="24sp"
                android:textStyle="bold"
...
                android:hint="Suas notas pessoais aqui..."
                android:layout_marginTop="16dp"
                android:textSize="14sp"
                android:fontStyle="italic" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="Salvar Receita"
                android:padding="12dp"
                app:cornerRadius="8dp" />
...
