...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <Button
            android:id="@+id/btnSorteioExterno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Explorar Sabores" />
    </LinearLayout>

    <FrameLayout
...
